Penambahan keterangan pada tampilan kehadiran

--- a/src/main/resources/templates/hariKerja.html
+++ b/src/main/resources/templates/hariKerja.html
@@ -498,7 +498,7 @@ $(document).ready(function(){
             </div>
         </div>
     </div>
-    <input type="text" id="valueSelected" name="valueSelected" th:value="${valueSelected}">    
+    <input type="text" id="valueSelected" name="valueSelected" th:value="${valueSelected}" style="display:none">    
     
     
      <style>
